--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,11 @@
     margin:0;
     padding:0;
 }
+
+
+.nav-link a{
+    color: #272727;
+    text-decoration: none;
+    font-size: 18px;
+    margin-right:18px;
+}
